tests/errors/concat_2_int.src
.IPPcode18
createframe
pushframe
defvar LF@concatMiss
concat LF@concatMiss int@52 int@-48
write LF@concatMiss